Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35532

Windows: Holding ALT while pressing Num9 four times (9999) asserts

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.1
    • 5.2.0 RC1
    • Core: I/O
    • None
    • Windows 7, x64
    • 8e2f95e5a2ebc54c600d1db416b1dd84e433d115 (stable, 20.12.2013, 5.2.1) (Qt 4.8.6, 9.1.2014)

    Description

      I'm not really sure of the importance of this.
      On one hand, it can cause virtually any Qt app to crash, OTOH hardly anybody will enter this keyboard combination.

      Hold <Left ALT> and press <NumPad9> four times when focus is in a QLineEdit.
      (I reproduced it in the fortune client example)

      ASSERT: "vk >0 && vk < 256" in file qwindowskeymapper.cpp, line 486

      Note: This keyboard combination can be useful if you need to enter some special Unicode characters you know the decimal codepoint for. For instance, typing ALT+"065" gives the character "A".

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              owolff Oliver Wolff
              smd Jan Arve
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes