src/gui/kernel/qkeymapper_win.cpp
@@ -803,8 +803,11 @@ bool QKeyMapperPrivate::translateKeyEvent(QWidget *widget, const MSG &msg, bool 
     bool k0 = false;
     bool k1 = false;
     int  msgType = msg.message;
-    // Add this key to the keymap if it is not present yet.
-    updateKeyMap(msg);
+    // WM_CHAR messages already contain the character in question so there is
+    // no need to fiddle with our key map. In any other case add this key to the
+    // keymap if it is not present yet.
+    if (msg.message != WM_CHAR)
+        updateKeyMap(msg);
 
     const quint32 scancode = (msg.lParam >> 16) & scancodeBitmask;
     const quint32 vk_key = msg.wParam;
